--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,9 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "disable-tls": true,
+        "secure-http": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
